# algorithms-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
MLD/: MemoryLeakDetector.cpp  MemoryLeakDetector.h
assignment01/: README.md
assignment01/src/: CityTemperatureData.cpp  CityTemperatureData.h  csv.cpp  csv.h  main.cpp  test.cpp
assignment02/: README.md  questions.txt
assignment02/src/: main.cpp  search.h  test.cpp  util.cpp  util.h
assignment03/: README.md
assignment03/src/: Collection.h  DynamicArray.h  LinkedList.h  main.cpp  test.cpp
assignment04/: README.md  answers.txt  questions.txt
assignment04/src/: main.cpp  sort.h  test.cpp
assignment05/: README.md
assignment05/src/: main.cpp  sort.h  test.cpp
assignment06/: README.md
assignment06/src/: HashTable.h  main.cpp  test.cpp
assignment07/: README.md  questions.txt
assignment07/src/: Queue.h  SequentialCollection.h  Stack.h  main.cpp  test.cpp
assignment08/: README.md  questions.txt
assignment08/src/: Graph.h  main.cpp  test.cpp
assignment09/: README.md
assignment09/src/: WeightedGraph.h  main.cpp  test.cpp
assignment10/: CMakeLists.txt  README.md  answers.txt  questions.txt
assignment10/src/: WeightedGraph.h  main.cpp  test.cpp
assignment11/: README.md
assignment11/src/: bst.h  main.cpp  test.cpp  timing.h
assignment12/: README.md
assignment12/src/: PriorityQueue.h  main.cpp  test.cpp  timing.h
cmake/: static_analyser.cmake
lib/: CMakeLists.txt  MemoryLeakDetector.h  PPlot.cpp  PPlot.h  SVGPainter.cpp  SVGPainter.h
